--- a/main.scss
+++ b/main.scss
@@ -37,7 +37,7 @@ body {
     transition: all .05s;
     backface-visibility: hidden;
     
-    font-weight: 300;
+    font-weight: 400;
      &:hover,
      &:active {
          color: #0367A6;
@@ -74,7 +74,7 @@ body {
 .main-section {
     display: flex;
     justify-content: center;
-    opacity: 0.3;
+    // opacity: 0.3;
     margin: 0 9rem;
     margin-top: 5rem;
 }
@@ -82,7 +82,7 @@ body {
     flex: 5;
     width: 649px;
     height: 816px;
-    background-color: #89A7AE;
+    // background-color: #89A7AE;
     margin-right: 1.2rem;
 }
 .section-2 {
@@ -101,7 +101,351 @@ body {
     background-color: #89A7AE;
 }
 .section-line {
-    border-left: 1px solid rgba(3, 103, 166, 1);
-    height: 110vh;
+    border-left: 1px solid rgba(#0367A6, 0.5);
+    height: 200vh;   
+}
+.heading-main {
+    font-size: 2rem;
+    font-weight: 500;
+    color: #070a36;
     
+}
+.heading-span {
+    color: #0367A6;
+}
+.location-input-icon {
+    position: relative;
+}
+.button-and-icon {
+    position: absolute;
+    z-index: 50;
+    right: 0;
+}
+.input {
+        font-size:1.5rem;
+        font-family: inherit;
+        color: inherit;
+        padding: 1rem 1.5rem;
+        border-radius: 25px;
+        background-color: rgba(#fff,0.9);
+        border: none;
+        border-bottom: 3px solid transparent;
+        width: 100%;
+        margin-top: 1rem;
+        display: block;
+        transition: all 0.3s;
+        box-shadow: 0rem 0.5rem 2rem rgba(#000,.1);
+
+        &::placeholder {
+            font-size: 1.2rem;
+            color: #89A7AE;
+            font-weight: 350;
+        }
+
+        &:focus:invalid {
+            border-bottom: 3px solid red;
+        }
+
+        &:focus {
+            outline: none;
+            box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+            // border-bottom: 3px solid #000;
+        }
+}
+.main-input-label {
+    display: block;
+    position: relative;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    margin-top: 1rem;
+    padding: 0 3rem;
+    font-size: 1rem;
+    margin-top: 1rem;
+    padding: 0.3rem 3rem;
+}
+.main-input-checkbox {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+// Custom-Input
+.checkmark {
+    position: absolute;
+    top: 4px;
+    left: 6px;
+    height: 25px;
+    width: 25px;
+    background-color: #fff;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+    border-radius: .2rem;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .main-input-label:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .main-input-label input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .main-input-label input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .main-input-label .checkmark:after {
+    left: 9px;
+    top: 3px;
+    width: 7px;
+    height: 15px;
+    border: solid white;
+    border-top-width: medium;
+    border-right-width: medium;
+    border-bottom-width: medium;
+    border-left-width: medium;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+// Custom-Input
+.main-input {
+
+}
+
+//Button 
+.btn {
+	background-color:#05C7F2;
+	border-radius: 1.3rem;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family: inherit;
+	font-size:21px;
+	padding: 1.24rem 5.7rem;
+	text-decoration:none;
+    border: none;
+}
+.btn:hover {
+	background-color: darken($color: #05C7f2, $amount: 5)
+}
+// .btn:active {
+// 	position:relative;
+// 	top:1px;
+// }
+.btn-main {
+    border-top-left-radius: 1.3rem;
+    border-top-right-radius: 1.3rem;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.icons {
+    height: 5.2rem;
+    width: 14rem;
+    background-color: #FAFEFF;
+    position: absolute;
+    z-index: 60;
+    border-bottom-left-radius: 1.3rem;
+    border-bottom-right-radius: 1.3rem;
+}
+.icon-item-1 {
+    height: 3.5rem;
+    width: 3.5rem;
+    background: linear-gradient(to top right, #05C7F2, #0689BC);
+    z-index: 70;
+    border-radius: 1rem;
+    margin-top: .7rem;
+    margin-left: .7rem;
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+}
+.icon-item-2 {
+    display: inline-block;
+    height: 3.5rem;
+    width: 3.5rem;
+    background: #FAFEFF;//linear-gradient(to top right, #05C7F2, #0689BC);
+    z-index: 70;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+    border-radius: 1rem;
+    margin-top: .7rem;
+    margin-left: .8rem;
+    position: relative;
+    cursor: pointer;
+}
+.icon-item-3 {
+    display: inline-block;
+    height: 3.5rem;
+    width: 3.5rem;
+    background: #FAFEFF;//linear-gradient(to top right, #05C7F2, #0689BC);
+    z-index: 70;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+    border-radius: 1rem;
+    margin-top: .7rem;
+    margin-left: .8rem;
+    position: relative;
+    cursor: pointer;
+}
+.icon-svg-1 {
+    position: absolute;
+    z-index: 70;
+    top: 0;
+    left: 0;
+    transform: translate(57%,35%);
+}
+.icon-svg-2 {
+    position: absolute;
+    z-index: 70;
+    top: 0;
+    left: 0;
+    transform: translate(34%, 40%);
+
+}
+.icon-svg-3 {
+    position: absolute;
+    z-index: 70;
+    top: 0;
+    left: 0;
+    transform: translate(43%, 29%);
+}
+.section-1-2 {
+    margin-top: 4rem;
+}
+.section-1-2-heading{
+    font-weight: 500;
+}
+.section-1-2-input {
+    position: relative;
+}
+.section-1-2-btn {
+    position: absolute;
+    z-index: 50;
+    top: 0;
+    right: 0;
+}
+.section-1-3-input {
+    position: relative;
+    margin-top: 2rem;
+}
+.section-1-3-btn {
+    position: absolute;
+    padding: 1.24rem 5.7rem;
+    z-index: 50;
+    top: 0;
+    right: 0;
+}
+.section-1-4{
+    margin-top: 1.5rem;
+}
+.section-1-4-value-1{
+    display: inline-block;
+    position: relative;
+    height: 6rem;
+    width: 14rem;
+    border-radius: 2rem;
+    background-color: #fff;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+
+}
+.section-1-4-value-2{
+    position: relative;
+    border-radius: 2rem;
+    display: inline-block;
+    height: 6rem;
+    width: 14rem;
+    margin-left: 1.6rem;
+    background-color: #fff;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+}
+.section-1-4-value-3{
+    position: relative;
+    border-radius: 2rem;
+    display: inline-block;
+    height: 6rem;
+    margin-left: 1.6rem;
+    width: 14rem;
+    background-color: #fff;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+}
+.section-1-4-icon{
+    position: absolute;
+    z-index: 70;
+    top: 2rem;
+    left: 1.5rem;
+}
+.section-1-4-time {
+    font-size: 1.5rem;
+    color: #000;
+    position: absolute;
+    z-index: 71;
+    // top: -0.2rem;
+    // left: 3.5rem;
+    top: 0;
+    left: 0;
+    transform: translate(49%, -5%);
+}
+.section-1-4-visible {
+    position: absolute;
+    z-index: 72;
+    top: 0.5rem;
+    left: 9.5rem;
+}
+.section-1-4-distance {
+    font-size: 1.4rem;
+    color: #000;
+    position: absolute;
+    z-index: 71;
+    // top: -0.2rem;
+    // left: 3.5rem;
+    top: 0;
+    left: 0;
+    transform: translate(60%, 7%);
+    display: block ruby;
+}
+.section-1-5 {
+    margin-top: 2.5rem;
+}
+.section-1-5-input {
+    position: relative;
+}
+.section-1-5-btn {
+    position: absolute;
+    z-index: 50;
+    top: 0;
+    right: 4rem;
+}
+.input-section-1-5 {
+    width: 80%;
+}
+.section-1-6 {
+    margin-top: 2rem;
+    background: linear-gradient(to bottom right,#05C7F2,#0367A6);
+    height: 6rem;
+    width: 100%;
+    border-radius: 1.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section-1-6-order {
+    font-size: 1.6rem;
+    color: #f9f9f9;
+}
+.section-1-6-price {
+    color: #070A36;
+    font-size: 1.2rem;
 }
