--- a/main.scss
+++ b/main.scss
@@ -16,6 +16,7 @@ body {
      box-sizing: border-box; 
      font-family: poppins;
      background: linear-gradient(49.04deg, #F2F2F2 38.83%, #E8E8E8 151.28%);
+     overflow: hidden;
 }
 
 .header {
@@ -138,8 +139,8 @@ body {
         transition: all 0.3s;
         box-shadow: 0rem 0.5rem 2rem rgba(#000,.1);
 
-        &::placeholder {
-            font-size: 1.2rem;
+        &:placeholder {
+            font-size: 0.5rem;
             color: #89A7AE;
             font-weight: 350;
         }
