--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ html {
 body {
   box-sizing: border-box;
   font-family: poppins;
-  background: linear-gradient(49.04deg, #F2F2F2 38.83%, #E8E8E8 151.28%); }
+  background: linear-gradient(49.04deg, #F2F2F2 38.83%, #E8E8E8 151.28%);
+  overflow: hidden; }
 
 .header {
   height: 110px;
@@ -126,8 +127,8 @@ body {
   display: block;
   transition: all 0.3s;
   box-shadow: 0rem 0.5rem 2rem rgba(0, 0, 0, 0.1); }
-  .input::placeholder {
-    font-size: 1.2rem;
+  .input:placeholder {
+    font-size: 0.5rem;
     color: #89A7AE;
     font-weight: 350; }
   .input:focus:invalid {
