--- a/main.scss
+++ b/main.scss
@@ -16,7 +16,7 @@ body {
      box-sizing: border-box; 
      font-family: poppins;
      background: linear-gradient(49.04deg, #F2F2F2 38.83%, #E8E8E8 151.28%);
-     overflow: hidden;
+     overflow-x: hidden;
 }
 
 .header {
@@ -81,6 +81,80 @@ body {
     margin: 0 9rem;
     margin-top: 5rem;
 }
+@media (max-width: 1100px) {
+    .main-section {
+      flex-direction: column;
+    }
+    .section-line {
+        display: none;
+    }
+    .section-2 {
+        margin-top: 3rem;
+    }
+    .header-item-link:not(:first-child) {
+        margin-left: 1rem;
+    }
+  }
+@media (max-width:1471px) {
+    .main-section {
+        flex-direction: column;
+        align-items: center;
+    }
+    .bg-map {
+        overflow: hidden;
+    }
+    .section-line {
+        display: none;
+    }
+    .section-2 {
+        margin-top: 3rem !important;
+        align-self: flex-start !important;
+        margin-left: 210px !important;
+    }
+    body {
+        height: 400vh !important;
+        overflow-x: hidden !important;
+    }
+    
+}
+@media (min-width: 1472px) and (max-width: 1801px) {
+    .heading-main {
+        font-size: 1.5rem !important;
+    }
+    .input {
+        font-size: 1rem !important;
+    }
+    .input::placeholder{
+        font-size: .85rem !important;
+    }
+    .btn-main {
+        border-top-left-radius: 1.3rem !important;
+        border-top-right-radius: 1.3rem !important;
+        border-bottom-left-radius: 1.3rem !important;
+        border-bottom-right-radius: 1.3rem !important;
+    }
+    .btn {
+        padding: 0.97rem 3.7rem !important;
+    }
+    .icons {
+        height: 0rem !important;
+        transform: translateX(-48px) !important;
+    }
+    .section-1-4-icon {
+        position: absolute !important;
+        z-index: 70 !important;
+        top: 2rem !important;
+        left: 1.5rem !important;
+        transform: translate(-23px, -36px) !important;
+    }
+    .section-1-4-clock{
+        -webkit-transform: translate(33%, 1%) !important;
+    }
+    .section-1-4-visible{
+        transform: translate(507%, 44%) !important;
+    }
+}
+
 .section-1 {
     flex: 5;
     width: 649px;
@@ -166,6 +240,8 @@ body {
     font-size: 1rem;
     margin-top: 1rem;
     padding: 0.3rem 3rem;
+    // padding: 0.3rem 3rem;
+    width: 46%;
 }
 .main-input-checkbox {
     position: absolute;
@@ -268,7 +344,7 @@ body {
 .icon-item-1 {
     height: 3.5rem;
     width: 3.5rem;
-    background: linear-gradient(to top right, #05C7F2, #0689BC);
+    background: #fafeff;//
     z-index: 70;
     border-radius: 1rem;
     margin-top: .7rem;
@@ -276,6 +352,21 @@ body {
     display: inline-block;
     position: relative;
     cursor: pointer;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+    .icon-svg-1 {
+        svg {
+            path {
+                fill:#89A7AE;
+            }
+        }
+    }
+    &:hover .icon-1 {
+        background: linear-gradient(to top right, #05C7F2, #0689BC);
+        fill: #fafeff;
+    }
+}
+.icon-item-1:hover {
+    background: linear-gradient(to top right, #05C7F2, #0689BC);
 }
 .icon-item-2 {
     display: inline-block;
@@ -289,6 +380,20 @@ body {
     margin-left: .8rem;
     position: relative;
     cursor: pointer;
+    .icon-svg-2 {
+        svg {
+            path {
+                fill:#89A7AE;
+            }
+        }
+    }
+    &:hover .icon-2 {
+        background: linear-gradient(to top right, #05C7F2, #0689BC);
+        fill: #fafeff;
+    }
+}
+.icon-item-2:hover {
+    background: linear-gradient(to top right, #05C7F2, #0689BC);
 }
 .icon-item-3 {
     display: inline-block;
@@ -302,6 +407,28 @@ body {
     margin-left: .8rem;
     position: relative;
     cursor: pointer;
+    .icon-svg-3 {
+        svg {
+            path {
+                fill:#89A7AE;
+            }
+        }
+    }
+    // &:hover .icon-3 {
+    //     background: linear-gradient(to top right, #05C7F2, #0689BC);
+    //     fill: #fafeff;
+    // }
+}
+.icon-item-3:hover, .icon-3 {
+    background: linear-gradient(to top right, #05C7F2, #0689BC);
+    fill: #fafeff;
+    div{
+        svg{
+            path {
+                fill: #fafeff;
+            }
+        }
+    }
 }
 .icon-svg-1 {
     position: absolute;
@@ -354,16 +481,38 @@ body {
 .section-1-4{
     margin-top: 1.5rem;
 }
-.section-1-4-value-1{
-    -webkit-width: 11.3rem;
-    display: inline-block;
+// .secion-1-4-input-icons {
+//     display: flex;
+//     justify-content: center;
+// }
+.section-1-4-value-1 {
     position: relative;
-    height: 6rem;
-    width: 11.3rem;
-    border-radius: 2rem;
-    background-color: #fff;
-    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+    display: inline;
+    margin-left: 10px;
+}
+.section-4-input{
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 600;
+    color: #000;
+    width: 30%;
+    // -webkit-width: 11.3rem;
+    // display: inline-block;
+    // position: relative;
+    // height: 6rem;
+    // width: 11.3rem;
+    // border-radius: 2rem;
+    // background-color: #fff;
+     box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+     height: 4.2rem;
+     display: inline;
 
+}
+.section-4-input::placeholder {
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 600;
+    color: #000;
 }
 .section-1-4-value-2{
     position: relative;
@@ -390,8 +539,11 @@ body {
     z-index: 70;
     top: 2rem;
     left: 1.5rem;
+    transform: translate(1px,-36px);
+    // transform: translateY(-14px);
+    // -moz-transform: translate(-5%,-37%);
 }
-.section-1-4-time {
+.section-1-4-clock {
     font-size: 1.2rem;
     color: #000;
     position: absolute;
@@ -400,14 +552,15 @@ body {
     // left: 3.5rem;
     top: 0;
     left: 0;
-    transform: translate(49%, -5%);
+    transform: translate(-12%, -43%);
+    -webkit-transform: translate(-14%, 1%);
 }
 .section-1-4-visible {
     position: absolute;
     z-index: 72;
     top: 0;
     right: 0px;
-    transform: translate(457%,50%);
+    transform: translate(551%, 44%);
 }
 .section-1-4-distance {
     font-size: 1.2rem;
@@ -468,6 +621,10 @@ body {
     background-color: #f9f9f9;
     box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
     position: relative;
+    transition: all 0.2s;
+}
+.route-1:hover, .route-2:hover {
+    transform: scale(1.1);
 }
 .location-icon {
     position: absolute;
@@ -549,6 +706,7 @@ body {
     box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
     position: relative;
     margin-top: 1.2rem;
+    transition: all 0.2s;
 }
 .circle {
     height: 30px;
@@ -572,7 +730,7 @@ body {
 .option-2{
     height: 6rem;
     width: 14rem;
-    background-color: #05C7f2;
+    background-color: transparent;
     margin-left: 2rem;
 }
 .options-icon {
@@ -610,4 +768,31 @@ body {
 }
 .vector-2 {
     transform: translate(10px, 9px);
+}
+.btn-landscape {
+    padding: 1.24rem 2.7rem;
+    margin-top: 1rem;
+    border-radius: 40px;
+    background-color: #f9f9f9;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+    color: #89A7AE;
+}
+.btn-potrait {
+    padding: 1.24rem 4.2rem;
+    margin-top: 1rem;
+    border-radius: 40px;
+    background-color: #f9f9f9;
+    box-shadow: 0rem 0.8rem 2rem rgba(#000,.1);
+    color:  #89A7AE;
+}
+.btn-landscape:hover {
+    background-color: #05C7F2;
+    color: #f9f9f9;
+}
+.btn-potrait:hover {
+    background-color: #05C7F2;
+    color: #f9f9f9;
+}
+.icon-3 {
+    fill: #89A7AE;
 }
