--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   box-sizing: border-box;
   font-family: poppins;
   background: linear-gradient(49.04deg, #F2F2F2 38.83%, #E8E8E8 151.28%);
-  overflow: hidden; }
+  overflow-x: hidden; }
 
 .header {
   height: 110px;
@@ -71,6 +71,60 @@ body {
   justify-content: center;
   margin: 0 9rem;
   margin-top: 5rem; }
+
+@media (max-width: 1100px) {
+  .main-section {
+    flex-direction: column; }
+  .section-line {
+    display: none; }
+  .section-2 {
+    margin-top: 3rem; }
+  .header-item-link:not(:first-child) {
+    margin-left: 1rem; } }
+
+@media (max-width: 1471px) {
+  .main-section {
+    flex-direction: column;
+    align-items: center; }
+  .bg-map {
+    overflow: hidden; }
+  .section-line {
+    display: none; }
+  .section-2 {
+    margin-top: 3rem !important;
+    align-self: flex-start !important;
+    margin-left: 210px !important; }
+  body {
+    height: 400vh !important;
+    overflow-x: hidden !important; } }
+
+@media (min-width: 1472px) and (max-width: 1801px) {
+  .heading-main {
+    font-size: 1.5rem !important; }
+  .input {
+    font-size: 1rem !important; }
+  .input::placeholder {
+    font-size: .85rem !important; }
+  .btn-main {
+    border-top-left-radius: 1.3rem !important;
+    border-top-right-radius: 1.3rem !important;
+    border-bottom-left-radius: 1.3rem !important;
+    border-bottom-right-radius: 1.3rem !important; }
+  .btn {
+    padding: 0.97rem 3.7rem !important; }
+  .icons {
+    height: 0rem !important;
+    transform: translateX(-48px) !important; }
+  .section-1-4-icon {
+    position: absolute !important;
+    z-index: 70 !important;
+    top: 2rem !important;
+    left: 1.5rem !important;
+    transform: translate(-23px, -36px) !important; }
+  .section-1-4-clock {
+    -webkit-transform: translate(33%, 1%) !important; }
+  .section-1-4-visible {
+    transform: translate(507%, 44%) !important; } }
 
 .section-1 {
   flex: 5;
@@ -147,7 +201,8 @@ body {
   padding: 0 3rem;
   font-size: 1rem;
   margin-top: 1rem;
-  padding: 0.3rem 3rem; }
+  padding: 0.3rem 3rem;
+  width: 46%; }
 
 .main-input-checkbox {
   position: absolute;
@@ -233,14 +288,23 @@ body {
 .icon-item-1 {
   height: 3.5rem;
   width: 3.5rem;
-  background: linear-gradient(to top right, #05C7F2, #0689BC);
+  background: #fafeff;
   z-index: 70;
   border-radius: 1rem;
   margin-top: .7rem;
   margin-left: .7rem;
   display: inline-block;
   position: relative;
-  cursor: pointer; }
+  cursor: pointer;
+  box-shadow: 0rem 0.8rem 2rem rgba(0, 0, 0, 0.1); }
+  .icon-item-1 .icon-svg-1 svg path {
+    fill: #89A7AE; }
+  .icon-item-1:hover .icon-1 {
+    background: linear-gradient(to top right, #05C7F2, #0689BC);
+    fill: #fafeff; }
+
+.icon-item-1:hover {
+  background: linear-gradient(to top right, #05C7F2, #0689BC); }
 
 .icon-item-2 {
   display: inline-block;
@@ -254,6 +318,14 @@ body {
   margin-left: .8rem;
   position: relative;
   cursor: pointer; }
+  .icon-item-2 .icon-svg-2 svg path {
+    fill: #89A7AE; }
+  .icon-item-2:hover .icon-2 {
+    background: linear-gradient(to top right, #05C7F2, #0689BC);
+    fill: #fafeff; }
+
+.icon-item-2:hover {
+  background: linear-gradient(to top right, #05C7F2, #0689BC); }
 
 .icon-item-3 {
   display: inline-block;
@@ -267,6 +339,14 @@ body {
   margin-left: .8rem;
   position: relative;
   cursor: pointer; }
+  .icon-item-3 .icon-svg-3 svg path {
+    fill: #89A7AE; }
+
+.icon-item-3:hover, .icon-3 {
+  background: linear-gradient(to top right, #05C7F2, #0689BC);
+  fill: #fafeff; }
+  .icon-item-3:hover div svg path, .icon-3 div svg path {
+    fill: #fafeff; }
 
 .icon-svg-1 {
   position: absolute;
@@ -319,14 +399,25 @@ body {
   margin-top: 1.5rem; }
 
 .section-1-4-value-1 {
-  -webkit-width: 11.3rem;
-  display: inline-block;
   position: relative;
-  height: 6rem;
-  width: 11.3rem;
-  border-radius: 2rem;
-  background-color: #fff;
-  box-shadow: 0rem 0.8rem 2rem rgba(0, 0, 0, 0.1); }
+  display: inline;
+  margin-left: 10px; }
+
+.section-4-input {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #000;
+  width: 30%;
+  box-shadow: 0rem 0.8rem 2rem rgba(0, 0, 0, 0.1);
+  height: 4.2rem;
+  display: inline; }
+
+.section-4-input::placeholder {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #000; }
 
 .section-1-4-value-2 {
   position: relative;
@@ -352,23 +443,25 @@ body {
   position: absolute;
   z-index: 70;
   top: 2rem;
-  left: 1.5rem; }
+  left: 1.5rem;
+  transform: translate(1px, -36px); }
 
-.section-1-4-time {
+.section-1-4-clock {
   font-size: 1.2rem;
   color: #000;
   position: absolute;
   z-index: 71;
   top: 0;
   left: 0;
-  transform: translate(49%, -5%); }
+  transform: translate(-12%, -43%);
+  -webkit-transform: translate(-14%, 1%); }
 
 .section-1-4-visible {
   position: absolute;
   z-index: 72;
   top: 0;
   right: 0px;
-  transform: translate(457%, 50%); }
+  transform: translate(551%, 44%); }
 
 .section-1-4-distance {
   font-size: 1.2rem;
@@ -423,7 +516,11 @@ body {
   border-radius: 1.5rem;
   background-color: #f9f9f9;
   box-shadow: 0rem 0.8rem 2rem rgba(0, 0, 0, 0.1);
-  position: relative; }
+  position: relative;
+  transition: all 0.2s; }
+
+.route-1:hover, .route-2:hover {
+  transform: scale(1.1); }
 
 .location-icon {
   position: absolute;
@@ -504,7 +601,8 @@ body {
   background-color: #f9f9f9;
   box-shadow: 0rem 0.8rem 2rem rgba(0, 0, 0, 0.1);
   position: relative;
-  margin-top: 1.2rem; }
+  margin-top: 1.2rem;
+  transition: all 0.2s; }
 
 .circle {
   height: 30px;
@@ -528,7 +626,7 @@ body {
 .option-2 {
   height: 6rem;
   width: 14rem;
-  background-color: #05C7f2;
+  background-color: transparent;
   margin-left: 2rem; }
 
 .options-icon {
@@ -565,3 +663,30 @@ body {
 
 .vector-2 {
   transform: translate(10px, 9px); }
+
+.btn-landscape {
+  padding: 1.24rem 2.7rem;
+  margin-top: 1rem;
+  border-radius: 40px;
+  background-color: #f9f9f9;
+  box-shadow: 0rem 0.8rem 2rem rgba(0, 0, 0, 0.1);
+  color: #89A7AE; }
+
+.btn-potrait {
+  padding: 1.24rem 4.2rem;
+  margin-top: 1rem;
+  border-radius: 40px;
+  background-color: #f9f9f9;
+  box-shadow: 0rem 0.8rem 2rem rgba(0, 0, 0, 0.1);
+  color: #89A7AE; }
+
+.btn-landscape:hover {
+  background-color: #05C7F2;
+  color: #f9f9f9; }
+
+.btn-potrait:hover {
+  background-color: #05C7F2;
+  color: #f9f9f9; }
+
+.icon-3 {
+  fill: #89A7AE; }
