--- a/main.scss
+++ b/main.scss
@@ -122,7 +122,7 @@ body {
         font-size: 1.5rem !important;
     }
     .input {
-        font-size: 1rem !important;
+        font-size: 0.8rem !important;
     }
     .input::placeholder{
         font-size: .85rem !important;
@@ -134,7 +134,7 @@ body {
         border-bottom-right-radius: 1.3rem !important;
     }
     .btn {
-        padding: 0.97rem 3.7rem !important;
+        padding: 0.75rem 3.7rem !important;
     }
     .icons {
         height: 0rem !important;
@@ -151,10 +151,23 @@ body {
         -webkit-transform: translate(33%, 1%) !important;
     }
     .section-1-4-visible{
-        transform: translate(507%, 44%) !important;
+        transform: translate(462%, 44%) !important;
+    }
+    #middle-visible {
+        transform: translate(350%, 44%) !important;
+    }
+    .middle-km {
+        transform: translate(22%, 44%) !important;
     }
 }
-
+// @media (min-width: 1496px) and (max-width: 1800px) {
+//     #section-1-4-visible{
+//         transform: translate(462%, 44%) !important;
+//     }
+// }
+.middle-visible {
+    transform: translate(446%, 44%) !important;
+}
 .section-1 {
     flex: 5;
     width: 649px;
